# fipie

./: .gitignore  .readthedocs.yaml  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: coverage.yaml  publish-to-test-pypi.yaml  publish-to-test-pypi.yml  tests.yaml
docs/: requirements.txt
docs/source/: conf.py  index.md
docs/source/api/: cluster.md  portfolio.md  weighting.md
example/: tutorial.ipynb
fipie/: __init__.py  cluster.py  data.py  date.py  portfolio.py  tree.py  weighting.py
fipie/data/: price.csv
tests/: test_cluster.py  test_common.py  test_data.py  test_date.py  test_portfolio.py  test_tree.py  test_weighting.py
tutti/: __init__.py  cluster.py  common.py  date.py  portfolio.py  tree.py  weighting.py
