[metadata]
name = fipie
description = A simple portfolio optimiser beyond the mean-variance optimisation
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
keywords =
    finance
    investing
    portfolio-optimization
    quantitative-finance
    portfolio-management
url = https://github.com/thoriuchi0531/fipie
author = Tomoya Horiuchi
author_email = thoriuchi0531@gmail.com
license = MIT
classifiers = 
    Development Status :: 3 - Alpha
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.6
    Topic :: Office/Business :: Financial :: Investment
project_urls =
    Documentation = https://fipie.readthedocs.io/en/latest/
    Source = https://github.com/thoriuchi0531/fipie

[options]
python_requires = >=3.6
install_requires =
    pandas>=0.25
    scipy>=1.0

[options.extras_require]
dev =
    pytest>=6.2.5
    coverage>=6.0.2
    sphinx==4.2.0
    sphinx-book-theme==0.1.6
    myst_parser==0.15.2